# dz_12.2_6

./: .coverage  pyproject.toml
.pytest_cache/: .gitignore
tests/: conftest.py  test_dict.py  test_dicts.py
utils/: dicts.py
